@@ -36,12 +36,12 @@ OPS(O1=20%O2=20%O3=20%O4=20%O5=20%O6=20)
 WIN(W1=15%W2=15%W3=15%W4=15%W5=15%W6=15)
 ECN(R=100%DF=20%T=20%TG=20%W=15%O=15%CC=100%Q=20)
 T1(R=100%DF=20%T=20%TG=20%S=20%A=20%F=30%RD=20%Q=20)
-T2(R=100%DF=20%T=20%TG=20%S=20%A=20%F=30%RD=20%Q=20)
-T3(R=100%DF=20%T=20%TG=20%W=30%S=20%A=20%F=30%O=10%RD=20%Q=20)
-T4(R=100%DF=20%T=20%TG=20%W=30%S=20%A=20%F=30%O=10%RD=20%Q=20)
-T5(R=100%DF=20%T=20%TG=20%W=30%S=20%A=20%F=30%O=10%RD=20%Q=20)
-T6(R=100%DF=20%T=20%TG=20%W=30%S=20%A=20%F=30%O=10%RD=20%Q=20)
-T7(R=100%DF=20%T=20%TG=20%W=30%S=20%A=20%F=30%O=10%RD=20%Q=20)
+T2(R=100%DF=20%T=20%TG=20%W=25%S=20%A=20%F=30%O=10%RD=20%Q=20)
+T3(R=100%DF=20%T=20%TG=20%W=25%S=20%A=20%F=30%O=10%RD=20%Q=20)
+T4(R=100%DF=20%T=20%TG=20%W=25%S=20%A=20%F=30%O=10%RD=20%Q=20)
+T5(R=100%DF=20%T=20%TG=20%W=25%S=20%A=20%F=30%O=10%RD=20%Q=20)
+T6(R=100%DF=20%T=20%TG=20%W=25%S=20%A=20%F=30%O=10%RD=20%Q=20)
+T7(R=100%DF=20%T=20%TG=20%W=25%S=20%A=20%F=30%O=10%RD=20%Q=20)
 U1(R=50%DF=20%T=20%TG=20%TOS=100%IPL=100%UN=100%RIPL=100%RID=100%RIPCK=100%RUCK=100%RUL=100%RUD=100)
 IE(R=50%DFI=40%T=20%TG=20%TOSI=100%CD=100%SI=100%DLI=100)
 
@@ -387,8 +387,13 @@ T7(R=Y%DF=Y%T=40%TG=40%W=0%S=Z%A=S+%F=AR%O=%RD=0%Q=)
 U1(DF=N%T=40%TG=40%TOS=C0%IPL=164%UN=0%RIPL=G%RID=G%RIPCK=G%RUCK=G%RUL=G%RUD=G)
 IE(DFI=N%T=40%TG=40%TOSI=S%CD=S%SI=S%DLI=S)
 
-# Firmware Version 4.30.7, Linux 2.4.20 I believe
-Fingerprint Linksys WRT54GL WAP (Linux kernel)
+# Firmware Version 4.30.7, Linux 2.4.20 I believe - Linksys WRT54GL WAP (Linux kernel)
+# Linux (slackware)  2.4.31 #6 Sun Jun 5 19:04:47 PDT 2005 i586 unknown
+# Linux (slackware) 2.4.31 #6 Sun Jun 5 19:04:47 PDT 2005 i586 k6-2 i386 GNU/Linux
+# Linux  2.4.27-2-386 #1  i686 GNU/Linux
+# Linux  2.4.20-pre10-ac1 #1 SMP  i686 Pentium II (Deschutes) GNU/Linux
+Fingerprint Linux 2.4.20 - 2.4.31 or Linksys WRT54GL WAP (runs Linux)
+Class Class Linux | Linux | 2.4.X | general purpose
 Class Class Linksys | Linux | 2.4.X | WAP
 SEQ(SP=BD-CF%GCD=<5%ISR=C4-D4%TI=Z%II=I%TS=7)
 OPS(O1=M5B4ST11NW0%O2=M5B4ST11NW0%O3=M5B4NNT11NW0%O4=M5B4ST11NW0%O5=M5B4ST11NW0%O6=M5B4ST11)
@@ -491,7 +496,8 @@ IE(DFI=N%T=3B%TG=3B%TOSI=Z%CD=S%SI=S%DLI=S)
 
 # Linux 2.6.12-1.1380_FC3 #1 Wed Oct 19 20:34:13 EDT 2005 i686 i686 i386 GNU/Linux
 # Linux 2.6.12-12mdk i686 (Mandriva 2006)
-Fingerprint Linux 2.6.12 (X86)
+# 2.6.9-42.0.2.ELsmp (CentOS 4.4)
+Fingerprint Linux 2.6.9 - 2.6.12 (X86)
 Class Linux | Linux | 2.6.X | general purpose
 SEQ(SP=BB-CF%GCD=<5%ISR=C0-D3%TI=Z%II=I%TS=A)
 OPS(O1=M5B4ST11NW2%O2=M5B4ST11NW2%O3=M5B4NNT11NW2%O4=M5B4ST11NW2%O5=M5B4ST11NW2%O6=M5B4ST11)
@@ -513,7 +519,7 @@ IE(DFI=N%T=40%TG=40%TOSI=S%CD=S%SI=S%DLI=S)
 # Linux 2.6.12-12mdksmp #1 SMP  i686 Intel(R) Pentium(R) 4 CPU 3.20GHz unknown GNU/Linux
 # Linux 2.6.9-42.0.2.ELsmp #1 SMP Thu Aug 17 17:57:31 EDT 2006 x86_64 x86_64 x86_64 GNU/Linux
 # Linux 2.6.12-21mdk i686 Pentium III (Katmai)
-Fingerprint Linux 2.6.9 - 12.6.12
+Fingerprint Linux 2.6.9 - 2.6.12
 Class Linux | Linux | 2.6.X | general purpose
 SEQ(SP=C6-CE%GCD=<7%ISR=C4-D2%TI=Z%II=I%TS=A)
 OPS(O1=M400CST11NW2%O2=M400CST11NW2%O3=M400CNNT11NW2%O4=M400CST11NW2%O5=M400CST11NW2%O6=M400CST11)
@@ -549,7 +555,8 @@ IE(DFI=N%T=3F%TG=3F%TOSI=Z%CD=S%SI=S%DLI=S)
 # Linux 2.6.16-gentoo-r7 #4 Tue Jul 18 18:33:44 UTC 2006 x86_64 AMD Athlon(tm) 64 Processor 2800+ GNU/Linux
 # Linux 2.6.16-1.2096_FC5 #1 SMP Wed Apr 19 05:14:26 EDT 2006 x86_64 x86_64 x86_64 GNU/Linux
 # Linux  2.6.15-26-amd64-k8 #1 SMP PREEMPT  x86_64 Ubuntu 6.06.1
-Fingerprint Linux 2.6.15 - 2.6.16
+# 2.6.14.2-96.caos
+Fingerprint Linux 2.6.14 - 2.6.16
 Class Linux | Linux | 2.6.X | general purpose
 SEQ(SP=C0-CE%GCD=<7%ISR=C6-D6%TI=Z%II=I%TS=8)
 OPS(O1=M400CST11NW2%O2=M400CST11NW2%O3=M400CNNT11NW2%O4=M400CST11NW2%O5=M400CST11NW2%O6=M400CST11)
@@ -601,6 +608,7 @@ IE(DFI=N%T=40%TG=40%TOSI=S%CD=S%SI=S%DLI=S)
 
 # Linux 2.6.16-2-686 Debian
 # Linux 2.6.13.4 i686 (custom build)
+# Linux vader 2.6.15-gentoo-r1-1 #4 SMP  i686 AMD Duron(tm) Processor GNU/Linux
 Fingerprint Linux 2.6.13 - 2.6.16
 Class Linux | Linux | 2.6.X | general purpose
 SEQ(SP=B9-D1%GCD=<5%ISR=C0-D5%TI=Z%II=I%TS=8)
@@ -618,7 +626,8 @@ U1(DF=N%T=40%TG=40%TOS=C0%IPL=164%UN=0%RIPL=G%RID=G%RIPCK=G%RUCK=G%RUL=G%RUD=G)
 IE(DFI=N%T=40%TG=40%TOSI=S%CD=S%SI=S%DLI=S)
 
 # Linux 2.6.17-1.2157_FC5 #1 SMP Tue Jul 11 22:53:56 EDT 2006 x86_64 x86_64 x86_64 GNU/Linux
-Fingerprint Linux 2.6.17-1.2157_FC5 (Fedora Core 5)
+# 2.6.14.2-96.caos (cAos 2)
+Fingerprint Linux 2.6.14 - 2.6.17
 Class Linux | Linux | 2.6.X | general purpose
 SEQ(SP=B7-CF%GCD=<5%ISR=C4-D7%TI=Z%II=I%TS=8)
 OPS(O1=M400CST11NW7|M5B4ST11NW7%O2=M400CST11NW7|M5B4ST11NW7%O3=M400CNNT11NW7|M5B4NNT11NW7%O4=M400CST11NW7|M5B4ST11NW7%O5=M400CST11NW7|M5B4ST11NW7%O6=M400CST11|M5B4ST11)
@@ -675,6 +684,23 @@ ECN(R=Y%DF=Y%T=40%TG=40%W=8018%O=M400CNNSNW7%CC=N%Q=)
 T1(R=Y%DF=Y%T=40%TG=40%S=O%A=S+%F=AS%RD=0%Q=)
 T2(R=N)
 T3(R=Y%DF=Y%T=40%TG=40%W=8000%S=O%A=S+%F=AS%O=M400CST11NW7%RD=0%Q=)
+T4(R=Y%DF=Y%T=40%TG=40%W=0%S=A%A=Z%F=R%O=%RD=0%Q=)
+T5(R=Y%DF=Y%T=40%TG=40%W=0%S=Z%A=S+%F=AR%O=%RD=0%Q=)
+T6(R=Y%DF=Y%T=40%TG=40%W=0%S=A%A=Z%F=R%O=%RD=0%Q=)
+T7(R=Y%DF=Y%T=40%TG=40%W=0%S=Z%A=S+%F=AR%O=%RD=0%Q=)
+U1(DF=N%T=40%TG=40%TOS=C0%IPL=164%UN=0%RIPL=G%RID=G%RIPCK=G%RUCK=G%RUL=G%RUD=G)
+IE(DFI=N%T=40%TG=40%TOSI=S%CD=S%SI=S%DLI=S)
+
+# Linux 2.6.17-gentoo-r4 PREEMPT i686 (Pentium 4, uniprocessor)
+FingerPrint Linux 2.6.17 (Gentoo, X86)
+Class Linux | Linux | 2.6.X | general purpose
+SEQ(SP=C9-CB%GCD=<7%ISR=CC-CE%TI=Z%II=I%TS=A)
+OPS(O1=M400CST11NW8%O2=M400CST11NW8%O3=M400CNNT11NW8%O4=M400CST11NW8%O5=M400CST11NW8%O6=M400CST11)
+WIN(W1=8000%W2=8000%W3=8000%W4=8000%W5=8000%W6=8000)
+ECN(R=Y%DF=Y%T=40%TG=40%W=8018%O=M400CNNSNW8%CC=N%Q=)
+T1(R=Y%DF=Y%T=40%TG=40%S=O%A=S+%F=AS%RD=0%Q=)
+T2(R=N)
+T3(R=Y%DF=Y%T=40%TG=40%W=8000%S=O%A=S+%F=AS%O=M400CST11NW8%RD=0%Q=)
 T4(R=Y%DF=Y%T=40%TG=40%W=0%S=A%A=Z%F=R%O=%RD=0%Q=)
 T5(R=Y%DF=Y%T=40%TG=40%W=0%S=Z%A=S+%F=AR%O=%RD=0%Q=)
 T6(R=Y%DF=Y%T=40%TG=40%W=0%S=A%A=Z%F=R%O=%RD=0%Q=)
@@ -751,10 +777,27 @@ T7(R=Y%DF=N%T=80%TG=80%W=0%S=Z%A=S+%F=AR%O=%RD=0%Q=)
 U1(DF=N%T=80%TG=80%TOS=0%IPL=38%UN=0%RIPL=G%RID=G%RIPCK=G%RUCK=G%RUL=G%RUD=G)
 IE(DFI=S%T=80%TG=80%TOSI=Z%CD=Z%SI=S%DLI=S)
 
+Fingerprint Microsoft Windows 2000 Server SP4
+Class Microsoft | Windows | 2000 | general purpose
+SEQ(SP=D4-DA%GCD=<7%ISR=10C-10E%TI=I%II=I%SS=S%TS=U)
+OPS(O1=M5ACNW2NNS%O2=M5ACNW2NNS%O3=M5ACNW2%O4=M5ACNW2NNS%O5=M5ACNW2NNS%O6=M5ACNNS)
+WIN(W1=F990%W2=F990%W3=F990%W4=F990%W5=F990%W6=FFFF)
+ECN(R=Y%DF=Y%T=40%TG=40%W=F990%O=M5ACNW2NNS%CC=N%Q=)
+T1(R=Y%DF=Y%T=40%TG=40%S=O%A=S+%F=AS%RD=0%Q=)
+T2(R=Y%DF=N%T=40%TG=40%W=0%S=Z%A=S%F=AR%O=%RD=0%Q=)
+T3(R=Y%DF=Y%T=40%TG=40%W=F990%S=O%A=S+%F=AS%O=M5ACNW2NNS%RD=0%Q=)
+T4(R=Y%DF=N%T=40%TG=40%W=0%S=A%A=O%F=R%O=%RD=0%Q=)
+T5(R=Y%DF=N%T=40%TG=40%W=0%S=Z%A=S+%F=AR%O=%RD=0%Q=)
+T6(R=Y%DF=N%T=40%TG=40%W=0%S=A%A=O%F=R%O=%RD=0%Q=)
+T7(R=Y%DF=N%T=40%TG=40%W=0%S=Z%A=S+%F=AR%O=%RD=0%Q=)
+U1(DF=N%T=40%TG=40%TOS=0%IPL=38%UN=0%RIPL=G%RID=G%RIPCK=G%RUCK=G%RUL=G%RUD=G)
+IE(DFI=S%T=40%TG=40%TOSI=Z%CD=Z%SI=S%DLI=S)
+
 # Windows 2003 Server winver output: Version 5.2 (Build 3790.srv03_sp1_rtm.050324-1447 : Service Pack 1)
-Fingerprint Microsoft Windows 2003 Server SP2
+# Windows Server 2003 - 3790.srv03_sp1_rtm.050324-1447, Service Pack 1
+Fingerprint Microsoft Windows 2003 Server SP1
 Class Microsoft | Windows | 2003 | general purpose
-SEQ(SP=F7-F9%GCD=<7%ISR=106-108%TI=I%II=I%SS=S%TS=0)
+SEQ(SP=EF-F9%GCD=<7%ISR=106-10A%TI=I%II=I%SS=S%TS=0)
 OPS(O1=M5B4NW0NNT00NNS%O2=M5B4NW0NNT00NNS%O3=M5B4NW0NNT00%O4=M5B4NW0NNT00NNS%O5=M5B4NW0NNT00NNS%O6=M5B4NNT00NNS)
 WIN(W1=4000%W2=4000%W3=4000%W4=4000%W5=4000%W6=4000)
 ECN(R=Y%DF=N%T=80%TG=80%W=4000%O=M5B4NW0NNS%CC=N%Q=)
@@ -788,7 +831,7 @@ IE(DFI=N%T=80%TG=80%TOSI=Z%CD=Z%SI=S%DLI=S)
 
 # Windows XP Professional SP2: Version 5.1 (2600.xpsp_sp2_rtm.040803-2158 : Service Pack 2. firewall disabled)
 Fingerprint Microsoft Windows XP SP2 (firewall disabled)
-Class Microsoft | Windows | NT/2K/XP | general purpose
+Class Microsoft | Windows | XP | general purpose
 SEQ(SP=C6-100%GCD=<7%ISR=101-110%TI=I%II=I%SS=S)
 OPS(O1=M4ECNW1NNT00NNS%O2=M4ECNW1NNT00NNS%O3=M4ECNW1NNT00%O4=M4ECNW1NNT00NNS%O5=M4ECNW1NNT00NNS%O6=M4ECNNT00NNS)
 WIN(W1=FFFF%W2=FFFF%W3=FFFF%W4=FFFF%W5=FFFF%W6=FFFF)
@@ -806,7 +849,7 @@ IE(DFI=S%T=80%TG=80%TOSI=Z%CD=Z%SI=S%DLI=S)
 # Windows XP Pro (VLK) Version 5.1 build 2600.xpsp_sp2_gdr.050301-1519 (Service Pack 2)  Machine does have MS05-019 and all other patches
 # Windows XP Professional SP2: Version 5.1 (2600.xpsp_sp2_gdr.050301-1519 : Service Pack 2. firewall disabled)
 Fingerprint Microsoft Windows XP SP2 (firewall disabled)
-Class Microsoft | Windows | NT/2K/XP | general purpose
+Class Microsoft | Windows | XP | general purpose
 SEQ(SP=DC-100%GCD=<7%ISR=100-110%TI=I%II=I%SS=S%TS=0)
 OPS(O1=M5B4NW0NNT00NNS%O2=M5B4NW0NNT00NNS%O3=M5B4NW0NNT00%O4=M5B4NW0NNT00NNS%O5=M5B4NW0NNT00NNS%O6=M5B4NNT00NNS)
 WIN(W1=FFFF%W2=FFFF%W3=FFFF%W4=FFFF%W5=FFFF%W6=FFFF)
@@ -820,6 +863,23 @@ T6(R=Y%DF=N%T=7F|80%TG=80%W=0%S=A%A=O%F=R%O=%RD=0%Q=)
 T7(R=Y%DF=N%T=7F|80%TG=80%W=0%S=Z%A=S+%F=AR%O=%RD=0%Q=)
 U1(DF=N%T=7F|80%TG=80%TOS=0%IPL=B0%UN=0%RIPL=G%RID=G%RIPCK=G%RUCK=G%RUL=G%RUD=G)
 IE(DFI=S%T=7F|80%TG=80%TOSI=Z%CD=Z%SI=S%DLI=S)
+
+# Microsoft Windows XP Professional (all patches up to date 9/29/06) Winver: Build 2600.xpsp_sp2_gdr.050301-1519 : Service Pack 2
+Fingerprint Microsoft Windows XP SP2
+Class Microsoft | Windows | XP | general purpose
+SEQ(SP=DC-100%GCD=<7%ISR=100-110%TI=I%II=I%SS=S%TS=0)
+OPS(O1=M5B4NW0NNT00NNS%O2=M5B4NW0NNT00NNS%O3=M5B4NW0NNT00%O4=M5B4NW0NNT00NNS%O5=M5B4NW0NNT00NNS%O6=M5B4NNT00NNS)
+WIN(W1=FC00%W2=FC00%W3=FC80%W4=FD58%W5=FD58%W6=FC94)
+ECN(R=Y%DF=Y%T=80%TG=80%W=FC00%O=M5B4NW0NNS%CC=N%Q=)
+T1(R=Y%DF=Y%T=80%TG=80%S=O%A=S+%F=AS%RD=0%Q=)
+T2(R=Y%DF=N%T=80%TG=80%W=0%S=Z%A=S%F=AR%O=%RD=0%Q=)
+T3(R=Y%DF=Y%T=80%TG=80%W=FC94%S=O%A=S+%F=AS%O=M5B4NW0NNT00NNS%RD=0%Q=)
+T4(R=Y%DF=N%T=80%TG=80%W=0%S=A%A=O%F=R%O=%RD=0%Q=)
+T5(R=Y%DF=N%T=80%TG=80%W=0%S=Z%A=S+%F=AR%O=%RD=0%Q=)
+T6(R=Y%DF=N%T=80%TG=80%W=0%S=A%A=O%F=R%O=%RD=0%Q=)
+T7(R=Y%DF=N%T=80%TG=80%W=0%S=Z%A=S+%F=AR%O=%RD=0%Q=)
+U1(DF=N%T=80%TG=80%TOS=0%IPL=B0%UN=0%RIPL=G%RID=G%RIPCK=G%RUCK=G%RUL=G%RUD=G)
+IE(DFI=S%T=80%TG=80%TOSI=Z%CD=Z%SI=S%DLI=S)
 
 # Motorola Cable Modem SB5100E  SB5100E-2.3.3.0-SCM00-NOSH  Hardware Version: 3 VxWorks Version: 5.4
 Fingerprint Motorola SurfBoard SB5100E cable modem
@@ -922,3 +982,20 @@ T6(R=Y%DF=Y%T=40%TG=40%W=0%S=A%A=Z%F=R%O=%RD=0%Q=)
 T7(R=Y%DF=Y%T=40%TG=40%W=0%S=Z%A=S+%F=AR%O=%RD=0%Q=)
 U1(DF=N%T=40%TG=40%TOS=C0%IPL=164%UN=0%RIPL=G%RID=G%RIPCK=G%RUCK=G%RUL=G%RUD=G)
 IE(DFI=N%T=40%TG=40%TOSI=S%CD=S%SI=S%DLI=S)
+
+# ZyXEL Prestige 660HW-61 ADSL router; ZyNOS F/W Version: V3.40(PE.10) | 10/28/2005
+Fingerprint ZyXEL Prestige 660HW-61 ADSL router
+Class ZyXel | ZyNOS || broadband router
+SEQ(SP=4-14%GCD=A000|14000|1E000|28000|32000|3C000%ISR=AF-B1%TI=I%II=I%SS=S%TS=U)
+OPS(O1=M200%O2=M200%O3=M200%O4=M200%O5=M200%O6=M200)
+WIN(W1=400%W2=400%W3=400%W4=400%W5=400%W6=400)
+ECN(R=Y%DF=N%T=FE%TG=FE%W=400%O=M200%CC=N%Q=)
+T1(R=Y%DF=N%T=FE%TG=FE%S=O%A=S+%F=AS%RD=0%Q=)
+T2(R=N)
+T3(R=N)
+T4(R=N)
+T5(R=Y%DF=N%T=FE%TG=FE%W=0%S=Z%A=S+%F=AR%O=%RD=0%Q=)
+T6(R=N)
+T7(R=N)
+U1(DF=N%T=FE%TG=FE%TOS=0%IPL=38%UN=0%RIPL=G%RID=G%RIPCK=G%RUCK=G%RUL=G%RUD=G)
+IE(DFI=N%T=FE%TG=FE%TOSI=S%CD=S%SI=S%DLI=S)
